# wsgw-gui

./: .env.example  .gitignore  README.md  agents.md  index.html  package-lock.json  package.json  progress.md  skills-lock.json  tsconfig.json  vite.config.ts
scripts/: run-builtin-news-task.mts  run-minimal-midscene.mts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cdp_session.rs  env_bootstrap.rs  lib.rs  main.rs
