[package]
name = "wsgw_gui"
version = "0.1.0"
description = "WSGW GUI desktop automation client"
authors = ["wsgw-gui maintainers"]
license = "MIT"
repository = "https://github.com/yyyyyyzt/wsgw-gui"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wsgw_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
dotenvy = "0.15"
tungstenite = { version = "0.26", default-features = false, features = ["handshake"] }
url = "2.5"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
